cargo-features = ["rename-dependency"]

[package]
authors = ["wavepack3t <wavepack3t@stackit>"]
name = "socketlabz"
version = "0.1.4"
description = "Unofficial Rust library for the SocketLabs Injection API."
repository = "https://github.com/wavepack3t/socketlabs-rs"
license = "MPL-2.0"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
reqwest = "0.9.4"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
